# kokoro.cpp

./: CMakeLists.txt  README.md
models/: vocab.json
src/: CMakeLists.txt  kokoro.cpp  kokoro.h  main.cpp
tools/: voice.py
voices/: af_heart.json
